--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,32 @@
+* {
+  box-sizing: border-box;
+  font-family: "Helvetica", sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+
+.container {
+  text-align: center;
+  padding: 15px;
+  margin: 10px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.csv-input {
+  padding: 10px;
+  display: block;
+  margin: 15px auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #09d3ac;
+.container p {
+  padding-top: 10px;
+  color: #666;
+}
+
+th {
+  cursor: pointer;
 }
